fixed layout issue with nav-path

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -253,6 +253,7 @@ nav {
 
 #nav-path {
   list-style: none;
+  margin: 0;
   li {
     display: inline-block;
     &:after {
